Content added by Pippi, fixed image layout issues

--- a/public/global.css
+++ b/public/global.css
@@ -95,6 +95,8 @@ select {
   }
 }
 
+/* Colors */
+
 
 html, body {
 	position: relative;
@@ -128,10 +130,10 @@ h1, h2, h3 {
 }
 .pb-content {
     height: 100%;
-    width: 70%;
+    width: 100%;
 }
 .content-wrapper {
-	padding: 5rem 3rem;
+	padding: 5rem 1rem;
 	border-left: solid 1px #e41586;
 	height: 100%;
 	width: 100%;
@@ -141,12 +143,6 @@ h1, h2, h3 {
 	flex-direction: row;
 	justify-content: flex-start;
 	flex-wrap: wrap;
-}
-.card {
-	background-color: rgb(31, 31, 31);
-	padding-bottom: 0.2rem;
-	display: flex;
-	flex-direction: row;
 }
 
 .main-image {
@@ -167,6 +163,17 @@ h2.page-title {
 	margin-bottom: 0.2rem;
 }
 
+.pb-title-header {
+	color: #e41586;
+	font-family: 'Arvo', serif;   
+	display: flex;
+	flex-direction: column; 
+	width: 80%;
+}
+.pb-title {
+	font-size: 2rem;
+}
+
 .pb-icon {
 	cursor: pointer;
 	color: #f1fb12;
@@ -177,11 +184,17 @@ h2.page-title {
 		display: none;
 	}
 	.pb-content {
-		width: 65%;
+		width: 65vw;
 		height: 100%;
 		margin-top: 1rem;
 	}
 	.content-wrapper {
 		padding: 5rem 2rem;
+	}
+}
+
+@media only screen and (min-width: 601px) and (max-width: 825px) {
+	.pb-content {
+		width: 90vw;
 	}
 }
